dh-make-perl (0.71-2) UNRELEASED; urgency=low

  * Fix "Tries to mkdir directory in home of building user": set HOME to a
    writable directory in debian/rules (closes: #609469).

 -- gregor herrmann <gregoa@debian.org>  Mon, 10 Jan 2011 19:27:04 +0100

dh-make-perl (0.71-1) unstable; urgency=low

  [ Ansgar Burchardt ]
  * DhMakePerl::Command::Packaging: Refer to "Debian systems" instead of
    "Debian GNU/Linux systems" in generated debian/copyright.

  [ Salvatore Bonaccorso ]
  * Improve regular expression to not match fields in Makefile.PL as
    MIN_PERL_VERSION to determine the version of the package. Thanks to
    Andrew Ruthven for reporting. (Closes: #596025)
  * Update my email address.

  [ gregor herrmann ]
  * Debian::Control::FromCPAN: also check test_requires and build_requires for
    finding build dependencies; bump (build) dependency on
    libmodule-depends-perl; closes: #601787.

  [ Peter Pentchev ]
  * My::Builder: fix a typo (raname -> rename).
  * t/AptContents.t: fix a typo (fund -> found).

  [ Damyan Ivanov ]
  * when looking for XS code, skip win32/ directories
  * Skip non-existing APT source files. (Closes: #557961 for real)
  * Detect usage of 'Artistic License 2.0' and include the license text in
    debian/copyright; (build-)depend on libsoftware-license-perl.
    (Closes: #589816)
  * Clarify documentation about --cpan argument being module name
    (Closes: 602059)
  * Support distribution names as arguments to --cpan (Closes: #607998)
  * Fix tests to stringify when comparing overloaded objects with strings
  * Control::Stanza: split dependency lists one package per line in order to
    make changes more VCS-friendly
  * bump debhelper compatibility level to 8 and drop --buildsystem from dh calls

 -- Damyan Ivanov <dmn@debian.org>  Tue, 28 Dec 2010 22:15:13 +0200

dh-make-perl (0.70-1) unstable; urgency=low

  [ Salvatore Bonaccorso ]
  * dh --buildsystem=buildsystem needs at least debhelper (>= 7.3.7), add this